# reference-desk

./: .gitattributes  .gitignore  ARCHITECTURE.md  GITHUB_TRANSFER.md  INSTALL_WINDOWS.txt  LICENSE  README.md  SETUP.bat  START.bat  app_settings.py  benchmark.example.jsonl  benchmark.starter.jsonl  corpus_scale.py  document_manager.py  embedding_cache.py  evaluate.py  hardware.py  ingest.py  lexical_index.py  main.py  pyproject.toml  quality_ui.py  rag_common.py  requirements-base.txt  requirements-cpu.txt  requirements-cuda.txt  requirements-rocm-linux.txt  requirements-rocm-windows.txt  requirements.txt  reranker_worker.py  search_app.py  source_updater.py  start.ps1  start.sh  workspace_store.py  workspace_ui.py
.github/workflows/: source-release.yml  tests.yml
examples/: benchmark.example.jsonl
frontend/: components.json  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: app-shell.tsx  empty-state.tsx  page-header.tsx  search-result-card.tsx  search-scope-select.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: documents-page.tsx  experiments-page.tsx  (+4 more)
scripts/: cache_models.py  doctor.py  export_release.py  publish_github.ps1  setup.ps1  setup.sh
tests/: test_corpus_scale.py  test_document_manager.py  test_evaluation_logic.py  test_hardware.py  test_ingestion_logic.py  test_lexical_index.py  test_main.py  test_reference_quality.py  test_retrieval_logic.py  test_search_api.py  test_source_updater.py  test_workspace_store.py
(+16 files in other folders)
