[project]
name = "reference-desk"
version = "0.2.0"
description = "Local hybrid retrieval and citation workspace for technical PDFs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.13"
dependencies = [
    "chromadb>=1.0,<2",
    "docling>=2.40,<3",
    "docling-core>=2.40,<3",
    "fastapi>=0.115,<1",
    "gradio>=5,<7",
    "huggingface-hub>=0.34,<2",
    "langchain-chroma>=0.2,<2",
    "langchain-core>=0.3,<2",
    "langchain-ollama>=0.3,<2",
    "pypdfium2>=4,<6",
    "transformers>=4.56,<6",
    "uvicorn[standard]>=0.30,<1",
]

[project.scripts]
document-rag = "main:main"

[dependency-groups]
dev = [
    "pytest>=8,<10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
